# VoxelExplorer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
shaders/: blockOutlineShader.vs  crosshair.fs  main.fs  main.vs  meshing.fs  meshing.vs  skybox.fs  sun-moon.fs  sun.fs  water.fs  water.vs
source/: BiomeTypes.h  Biomes.cpp  Biomes.h  Block.cpp  Block.h  BlockOutline.cpp  BlockOutline.h  BlockTypes.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Crosshair.cpp  Crosshair.h  Frustum.h  LoadingScreen.cpp  LoadingScreen.h  Player.cpp  Player.h  SkyboxRenderer.cpp  SkyboxRenderer.h  Structure.cpp  Structure.h  TextureManager.cpp  TextureManager.h  ThreadPool.h  World.cpp  World.h  main.cpp  main.h  shader.cpp  shader.h
